--- a/zookeeper/zookeeper.yml
+++ b/zookeeper/zookeeper.yml
@@ -1,32 +1,32 @@
 version: '3.1'
 services:
-  zookeeper1:
+  mac1:
     image: zookeeper/zookeeper:latest
     restart: always
-    hostname: zookeeper1
+    hostname: mac1
     ports:
       - 2181:2181
     environment:
       ZOO_MY_ID: 1
-      ZOO_SERVERS: server.1=0.0.0.0:2888:3888 server.2=zookeeper2:2888:3888 server.3=zookeeper3:2888:3888
-  zookeeper2:
+      ZOO_SERVERS: server.1=0.0.0.0:2888:3888 server.2=mac2:2888:3888 server.3=mac3:2888:3888
+  mac2:
     image: zookeeper/zookeeper:latest
     restart: always
-    hostname: zookeeper2
+    hostname: mac2
     ports:
       - 2182:2181
     environment:
       ZOO_MY_ID: 2
-      ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=0.0.0.0:2888:3888 server.3=zookeeper3:2888:3888
-  zookeeper3:
+      ZOO_SERVERS: server.1=mac1:2888:3888 server.2=0.0.0.0:2888:3888 server.3=mac3:2888:3888
+  mac3:
     image: zookeeper/zookeeper:latest
     restart: always
-    hostname: zookeeper3
+    hostname: mac3
     ports:
       - 2183:2181
     environment:
       ZOO_MY_ID: 3
-      ZOO_SERVERS: server.1=zookeeper1:2888:3888 server.2=zookeeper2:2888:3888 server.3=0.0.0.0:2888:3888
+      ZOO_SERVERS: server.1=mac1:2888:3888 server.2=mac2:2888:3888 server.3=0.0.0.0:2888:3888
 networks:
   default:
     external:
