update docker file

--- a/nacos/0.8.0/Dockerfile
+++ b/nacos/0.8.0/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8-jre-alpine3.8
 
 RUN wget -P /usr https://github.com/alibaba/nacos/releases/download/0.8.0/nacos-server-0.8.0.tar.gz && \
-    tar -zxvf nacos-server-0.8.0.tar.gz && \
-    rm nacos-server-0.8.0.tar.gz
+    tar -zxvf /usr/nacos-server-0.8.0.tar.gz && \
+    rm /usr/nacos-server-0.8.0.tar.gz
     
 RUN chmod -R +x /usr/nacos/bin/*
 
